test/Frontend/DiagnosticVerifier/expect-the-expected.swift
// RUN: %target-typecheck-verify-swift

import Expected // expected-error {{no such module 'Expected'}}
